<resources>
    <string name="app_name">security</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_theme">Theme</string>
    <string name="principal">Principal</string>
    <string name="template_avatar">Template Avatar</string>
    <string name="name">Name</string>
    <string name="paternal_surname">Paternal surname</string>
    <string name="maternal_surname">Maternal surname</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="sign_out">Sign out</string>
</resources>